# talos

./: .bump2version.cfg  .bumpversion.cfg  .codespellignore  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  annotation.config  annotation.nf  cohort_prep.sh  echtvar_config.json  example_usage.sh  main.nf  mkdocs.yml  nextflow.config  nextflow_schema.json  preparation.nf  pull_request_template.md  pyproject.toml  pytest.ini  requirements-cpg.txt  requirements-dev.txt  requirements-lint.txt  requirements.txt  setting_up_run.md  setup.py  talos.nf  talos_only.nf
.github/workflows/: build_deploy_main.yaml  clinvar_runner.yaml  dev_auto_build.yaml  docker-azure.yaml  docker.yaml  docs.yaml  get_version.py  index_page_builder.yaml  lint.yaml  report_agg.yaml  security-checks.yaml  test.yaml  test_docker.yaml  web-docs.yaml
additional_findings/: acmg_additional.csv  additional_findings_hail.py  additional_findings_parser.py  additional_map.json
annotation/: seqr_loader.py  vep_jobs.py
clinvar/: config.toml  conflict_huntr.py  run_conflict_huntr.sh
comparison/: README.md  comparison.py  comparison_wrapper.py  run_comparison.sh
design_docs/: AddingNewCategories.md  Annotation.md  Clinvar.md  Comparison.md  Configuration.md  HPO_Panel_Matching.md  Hail_Filter_and_Annotation.md  Hail_Filter_and_Label.md  Helpers.md  MOI_Checks.md  MockData.md  Models.md  PanelApp_interaction.md  Pedigree.md  RunHailFiltering.md  VCF_Reheader.md  annotation_source.md
design_docs/images/: comparison_uml.plantuml
docker/: build_docker_images.sh
docker/bcftools/: Dockerfile
docker/echtvar/: Dockerfile
docker/hail/: Dockerfile  convert_vcf_to_mt.py  generate_gene_roi.py  parse_alphamissense_into_ht.py  reformat_mane_summary.py
docs/: AddingNewCategories.md  Configuration.md  History.md  MockData.md  NextflowConfiguration.md  PanelApp_interaction.md  Pedigree.md  Phenopackets.md  Reanalysis.md  changelog.md  features.md  getting-started.md  index.md  mkdocs.yaml
docs/docs/: AddingNewCategories.md  Configuration.md  NextflowConfiguration.md  Reanalysis.md
echtvar/: am_config.json  clinvar_config.json  mitimpact_config.json  mitotip_config.json  napogee_config.json
helpers/: clinvar_conf.toml  cohort_prep.sh  file_prep.sh  forbidden_gene_check.py  generate_historic_data.py  get_untagged_incidental_genes.py  hpo_panel_match.py  hpo_panel_matching.py  minimise_output_for_seqr.py  parse_amissense_into_ht.py  parse_splicevardb_into_ht.py  pedigree_from_sample_metadata.py  prepare_aip_cohort.py  process_seqr_metadata.py  report_hunter.py  stratify_solved_cases.py  utils.py
helpers/templates/: index.html.jinja
large_files/: .gitattributes  README.md  gather_file.sh  gather_files.sh  genes_to_phenotype.txt  hp.obo
nextflow/: annotation.config  annotation.nf  preparation.config  talos.config  talos.nf  talos_preparation.nf  test.config
nextflow/inputs/: config.toml  echtvar_config.json  generate_mito_test_data.py  generate_test_data.py  joint.vcf.bgz  joint.vcf.bgz.tbi  joint_mito.vcf.bgz  joint_mito.vcf.bgz.tbi  pedigree.ped  pedigree_with_hpo.ped  splicevardb_extract.tsv  test.tsv  test_cohort_phenopackets.json
nextflow_inputs/: README.md  annotation.config  config.toml  father.vcf.bgz.tbi  generate_test_data.py  proband.vcf.bgz.tbi  talos.config
nextflow_inputs/individual_vcfs/: father.vcf.bgz  mother.vcf.bgz.tbi
nf_test_inputs/: config.toml  generate_test_data.py  nextflow.config  pedigree.ped  substitute_hpo_panel_data.json  test_annotated.vcf.bgz  test_annotated.vcf.bgz.tbi
panels/: metamist_hpo.py  panel_hpo.py
reanalysis/: README.md  additional_findings_parser.py  annotation.py  clinvar_by_codon.py  clinvar_runner.py  comparison.py  comparison_wrapper.py  cpg_generate_pheno_ped.py  csq_header_line.txt  data_model.py  deploy-config.json  generate_pedigree.py  generate_workflow_config.py  get_untagged_incidental_genes.py  hail_audit.py  hail_filter_and_categorise.py  hail_filter_and_classify.py  hail_filter_and_label.py  hail_filter_sv.py  hail_methods.py  hail_vep_annotation.py  homebrewed.py  hpo_panel_match.py  html_builder.py  interpretation_runner.py  isolated_comphet_test.py  isolated_runner.py  isolated_test.sh  local_runner.py  master.toml  metamist_registration.py  minimise_output_for_seqr.py  model_go_brrr.py  models.py  moi_tests.py  mt_to_vcf.py  new_panelapp_query.py  pedigree.py  pre_panelapp.json  pre_panelapp_mendeliome.json  (+28 more)
reanalysis/liftover/: lift_1_0_0_to_1_0_1.py  (+3 more)
release_scripts/: broad_rgp_release.sh  csiro_release.sh  validation_release.sh
talos/: CreateTalosHTML.py  GeneratePanelData.py  QueryPanelapp.py  RunHailFiltering.py  RunHailFilteringSV.py  ValidateMOI.py  clinvar_by_codon.py  clinvar_runner.py  config.py  cpg_generate_pheno_ped.py  data_model.py  hail_audit.py  hail_filter_and_label.py  hail_filter_sv.py  hpo_panel_match.py  html_builder.py  interpretation_runner.py  local_runner.py  minimise_output_for_seqr.py  model_go_brrr.py  models.py  moi_tests.py  mt_to_vcf.py  pre_panelapp.json  query_panelapp.py  reanalysis_cohort.toml  reanalysis_global.toml  report_hunter.py  run_reanalysis.sh  static_values.py  summarise_clinvar_entries.py  utils.py  validate_categories.py  vcf_to_mt.toml  vep_vcf_to_mt.py  version.py
test/: conftest.py  data_model.py  prep_data.py  prep_input.py  test_aip_comparison.py  test_apply_annotations.py  test_clinvar.py  test_comp_het_hail.py  test_de_novo.py  test_exclusion_log.py  test_generate_pedigree.py  test_hail_broad_filters.py  test_hail_categories.py  test_hail_classifications.py  test_hail_filters.py  test_homebrewed.py  test_hpo_flagging.py  test_html_builder.py  test_html_generation.py  test_metamist_hpo.py  test_models.py  test_moi_tests.py  test_new_panelapp.py  test_panelapp.py  test_panelapp_download.py  test_pedigree.py  test_pedigree_parser.py  test_results_comparison.py  test_seqr_interactions.py  test_unified_panelapp_parser.py  test_utils.py  test_validate_methods.py
(+367 files in other folders)
