[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name='talos'
description='Centre for Population Genomics Variant Prioritisation'
readme = "README.md"
version="8.4.0"
requires-python = ">=3.10,<3.12"
license-files = ["LICENSE"]
classifiers=[
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies=[
    'hail==0.2.137',
    'clinvarbitration>=2.2.7',
    'cloudpathlib[all]>=0.16.0',
    'cpg-utils>=5.4.1',
    'cyvcf2>=0.30.18',
    'grpcio-status>=1.48,<1.50',
    'httpx>=0.27.0',
    'Jinja2>=3.1.3',
    'mendelbrot>=0.0.3',
    'networkx>=3',
    'obonet>=1',
    'pendulum>=3.1.0',
    'pydantic>=2.5.2',
    'python-dateutil>=2',
    'semsimian',
    'tabulate>=0.8.9',
    'tenacity>=9.0.0',
    'toml==0.10.2',
]

[project.optional-dependencies]
# various requirements when running cpg-flow/analysis-runner
cpg = [
    'cpg-flow~=1.2',
    'google-cloud-storage==2.14.0',
]
test = [
    'bump-my-version',
    'pre-commit',
    'pytest',
    'pytest-httpx',
    'pytest-xdist>=3.6.0',
]

[project.urls]
Repository = "https://github.com/populationgenomics/talos"

[project.scripts]
run_workflow = 'talos.cpg_internal_scripts.run_workflow:cli_main'

[tool.hatch.build.targets.wheel]
packages = ["src/talos"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[options]
include_package_data = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ['test']

[tool.ruff]
line-length = 120
extend-exclude = ["venv", ".mypy_cache", ".venv", "build", "dist"]

[tool.ruff.lint]
# ignore pydocstyle, flake8-boolean-trap (FBT)
select = ["A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "FBT", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

ignore = [
    "ANN001", # Missing type annotation for function argument
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN201", # Missing return type annotation for public function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "ANN204", # Missing type annotation for special method `__init__`
    "G004", # Logging statement uses f-string
    "PLW0603", # Using the global statement to update `<VAR>` is discouraged
    "S101", # Use of assert detected
    "PLR0912", # Too many branches (> 12)
    "PLR0913", # Too many arguments in function (> 5)
    "C901", # method is too complex (> 10 conditions)
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "PLR2004" #  Magic value used in comparison, consider replacing `X` with a constant variable. I don't rate this
]

[tool.ruff.format]
indent-style = 'space'
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "hail", "cpg", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
cpg = ["metamist", "cpg_flow", "cpg_utils"]
hail = ["hail", "hailtop"]

[tool.ruff.lint.per-file-ignores]
# suppress the ARG002 "Unused method argument" warning in the stages.py file
## - we don't need generic cpg-flow arguments for every Stage, but need to fit the required method signature
"src/talos/cpg_internal_scripts/annotation_stages.py" = ["ARG002"]
"src/talos/cpg_internal_scripts/talos_stages.py" = ["ARG002"]

[tool.bumpversion]
current_version = "8.4.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version="{current_version}"'
replace = 'version="{new_version}"'

[[tool.bumpversion.files]]
filename = "src/talos/cpg_internal_scripts/CPG_Dockerfile"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "Dockerfile"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "nextflow/annotation.config"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "nextflow/preparation.config"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "nextflow/talos.config"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "src/talos/version.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "{current_version}"
replace = "{new_version}"
